--- a/layout.css
+++ b/layout.css
@@ -35,6 +35,7 @@ h2 {
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
